<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp">
    <ImageView
        android:id="@+id/ImageIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/dumbbellicon"
        android:src="@drawable/ic_workout" />
    <TextView
        android:id="@+id/TextWorkout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sample"
        android:textSize="16sp" />
    <Switch
        android:id="@+id/switchDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done" />
    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/delete" />
</LinearLayout>
